Harden security, fix bugs, and align docs with Spring Boot 4 best practices
Security fixes:
- Map user role to a Spring Security GrantedAuthority in
  UserDetailsServiceImpl (was previously discarded, making RBAC
  non-functional).
- Guard against privilege escalation: UserController now forces new/
  updated users to USER unless the caller already holds ROLE_ADMIN.
- Replace raw String role with a proper Role enum (ADMIN, USER) on
  User/UserDto, mapped via @Enumerated(EnumType.STRING).
- Remove credential logging (plaintext password, password hash) from
  AuthController and UserDetailsServiceImpl.
- Scope verbose/security logging and `debug: true` to the dev profile
  only; require JWT_SECRET explicitly in prod (no insecure fallback).
- Restrict Actuator to health/info publicly; everything else requires
  an authenticated ADMIN. Disable Swagger UI/API docs in prod.
- UserDto.password is now @JsonProperty(WRITE_ONLY): accepted on
  input, never serialized in responses.

Bug fixes:
- Add missing password validation on UserDto (was unvalidated,
  allowing null passwords to hit the DB as a NOT NULL violation).
- Rewrite GlobalExceptionHandler to consistently render every error
  (validation, auth, not-found, framework-level) as the same
  ErrorResponse JSON shape instead of an ad-hoc inline class, and fix
  a bug where UserNotFoundException (404) was being swallowed by the
  generic RuntimeException handler and returned as 400.
- Add a proper 401 response for bad login/refresh credentials, and an
  explicit accessDeniedHandler so 403s aren't rewritten to 401 by the
  container's sendError()-triggered /error re-dispatch.
- Fix JwtAuthenticationFilter to also run on ASYNC dispatches
  (shouldNotFilterAsyncDispatch = false), fixing 401s on the
  CompletableFuture-based /circuit-breaker/* endpoints.
- Fix duplicate loadUserByUsername lookup per request in
  JwtAuthenticationFilter.
- Fix JwtResponse always returning role "USER" regardless of the
  authenticated user's rea